# Script-Extender-Plugin-Configurator

./: .gitignore  pyproject.toml  script-extender-plugin-configurator.py
