[tool.poetry]
name = "Script Extender Plugin Configuration Tool"
version = "0.1.0"
description = "Graphical configuration frontend for certain Script Extender plugins (currently Buffout 4 and X-Cell)."
authors = ["Andrew Nelson <evildarkarchon@gmail.com>"]
license = "CC BY-NC-SA 4.0"
readme = ""
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
PySide6 = "^6.8.0.2"
tomlkit = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
enable_incomplete_feature = ["NewGenericSyntax"]
disable_error_code = [
	"import-untyped",
	"index",          # Redundant with Pyright reportIndexIssue
	"name-defined",   # Redundant with Ruff F821
	"operator",       # Redundant with Pyright reportOperatorIssue
]

[tool.pyright]
typeCheckingMode = "standard"
reportArgumentType = false         # Redundant with Mypy arg-type
reportAssignmentType = false       # Redundant with Mypy assignment
reportMissingParameterType = false # Redundant with Ruff ANN001
reportReturnType = false           # Redundant with Mypy return-type
reportUndefinedVariable = false    # Redundant with Ruff F821
reportUnusedImport = false         # Redundant with Ruff F401

[tool.ruff]
indent-width = 4
line-length = 140

[tool.ruff.format]
preview = true
indent-style = "space"
line-ending = "auto"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = [
	"ANN401",  # Allow use of typing.Any
	"E501",    # Duplicate of B950 line-too-long
	"E722",    # Duplicate of B001 bare-except
	"PLR0904", # too-many-public-methods
	"PLR0911", # too-many-return-statements
	"PLR0912", # too-many-branches
	"PLR0914", # too-many-local-variables
	"PLR0915", # too-many-statements
	"PLR1702", # too-many-nested-blocks
	"TRY003",  # Allow custom exception messages
	"TRY400",  # Use `logging.exception` instead of `logging.error`
	"PLR2004", # Allow magic values in comparisons
	"PLW2901", # Allow overwriting loop variables
]

extend-select = [
	"A",     # Builtin Shadowing
	"ANN",   # Type Annotations
	"ASYNC", # Async Suggestions
	"ARG",   # Unused Arguments
	"B",     # Bugs/Design Problems
	"BLE",   # Blind Except
	"C4",    # Comprehensions
	"FA",    # Future Annotations
	"FLY",   # F-Strings
	"FURB",  # Modernization
	"I",     # Import Sorting
	"ICN",   # Import Naming Conventions
	"ISC",   # Implicit String Concatenation
	"LOG",   # Logging
	"PERF",  # Performance Anti-Patterns
	"PIE",   # Misc Lints
	"PL",    # Pylint
	"PT",    # PyTest
	"PTH",   # Prefer Pathlib
	"RET",   # Return
	"RSE",   # Raise
	"RUF",   # Ruff
	"SIM",   # Simplify
	"SLF",   # Self
	"TCH",   # Type Checking
	"TID",   # Tidy Imports
	"TRY",   # Exception Anti-Patterns
	"UP",    # pyupgrade (New Syntax Suggestions)

	# "D",     # pydocstyle
	# "C901",  # Complex Structures
	# "COM",   # Commas
	# "DTZ",   # Unsafe/Naive Datetimes
	# "EM",    # Exception Messages
	# "FBT",   # Boolean Traps
	# "G",     # Logging Formatting
	# "N",     # PEP8 Naming Conventions
	# "PGH",   # PyGrep Hooks
	# "PYI",   # Stub Files
	# "Q",     # Quotes
	# "S",     # Security Testing
]